--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -23,7 +23,6 @@ on enable-low-power
     write /sys/devices/system/cpu/cpufreq/interactive/timer_rate 30000
     write /sys/devices/system/cpu/cpufreq/interactive/go_hispeed_load 90
     write /sys/devices/system/cpu/cpufreq/interactive/io_is_busy 1
-    write /sys/devices/system/cpu/cpufreq/interactive/boost 1
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 384000
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_min_freq 384000
 
@@ -43,11 +42,10 @@ on property:recovery.perf.mode=0
     write /sys/devices/system/cpu/cpu3/cpufreq/scaling_governor interactive
 
 on property:sys.boot_completed=1
-    write /sys/block/mmcblk0/queue/scheduler bfq
-    write /sys/block/mmcblk1/queue/scheduler bfq
-    write /sys/block/mmcblk0/queue/iosched/slice_idle 0
-    write /sys/block/mmcblk1/queue/iosched/slice_idle 0
-    write /sys/devices/system/cpu/cpufreq/interactive/boost 0
+    trigger enable-low-power
+
+    # Set I/O Scheduler to BFQ
+    setprop sys.io.scheduler bfq
 
     # Set up KSM
     write /sys/kernel/mm/ksm/deferred_timer 1
@@ -76,9 +74,6 @@ on charger
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
     write /sys/devices/system/cpu/cpu1/cpufreq/scaling_governor powersave
     write /sys/devices/system/cpu/cpu1/online 0
-
-on boot
-    trigger enable-low-power
 
 on property:init.svc.recovery=running
     trigger enable-low-power
