--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -28,6 +28,9 @@ import init.qcom.usb.rc
 import init.qcom.power.rc
 
 on early-init
+    mount debugfs debugfs /sys/kernel/debug
+    chmod 0755 /sys/kernel/debug
+
     mkdir /firmware-mdm 0771 system system
     symlink /data/tombstones /tombstones
     mkdir /efs 0771 system system
