msm8960: fix wifi calibration
Enable macloader to load the correct nvram calibration
data matching the hardware variant.  Since macloader
writes files in /data it needs to rerun after decryption,
requiring running during late_start. Additionally,
calibration data needs to be reloaded every time the driver
is reloaded.

Note that /sys/module/dhd/parameters/nvram_path is cleared
after the driver has accepted the input, you can use
"dhdutil -a wlan0 vars" to confirm that the calibration
data has been applied.

Change-Id: I37e14d69b1d8635435b0abee8e418da1bc2b3906
Signed-off-by: Paul Keith <javelinanddart@aidenswann.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -606,7 +606,7 @@ on property:persist.data.ds_fmc_app.mode=1
     start ds_fmc_appd
 
 service macloader /system/bin/macloader
-    class main
+    class late_start
     oneshot
     seclabel u:r:macloader:s0
 
@@ -626,6 +626,13 @@ on property:service.bootanim.exit=1
     write /proc/sys/net/ipv6/conf/rmnet_usb1/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet_usb2/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet_usb3/accept_ra 2
+
+on property:wlan.driver.status=ok
+    start macloader
+
+on property:init.svc.macloader=stopped
+    chown system root /data/.rev
+    chmod 0664 /data/.rev
 
 service charger /charger
     class charger
