msm8960: init: Add seclabel to macloader service
Change-Id: Ia0d4e065a0ea68bba4425ba0969460c7877e80a6

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -608,6 +608,7 @@ on property:persist.data.ds_fmc_app.mode=1
 service macloader /system/bin/macloader
     class main
     oneshot
+    seclabel u:r:macloader:s0
 
 # Disable boot timeout for external modems.
 on property:persist.sys.mdm.timeout_disable=1
