[DO NOT MERGE] msm8960: preload libqmi_client_qmux
* I have no fucking clue why this is necessary, but libqmi won't load
  because its missing the symbol apdumpstate which is in
  libqmi_client_qmux, even though libqmi relies on libqmi_client_qmux

* Shim doesn't work either...

* Whatever...

Change-Id: Ie55c891312e5444c5d9a9da77754c6e4b145fc0a

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -36,6 +36,7 @@ on early-init
     mkdir /efs 0771 system system
 
 on init
+    export LD_PRELOAD /system/vendor/lib/libqmi_client_qmux.so
     export LD_SHIM_LIBS /system/lib/libril.so|libsamsung_symbols.so
 
     # Set permissions for persist partition
