--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -36,7 +36,7 @@ on early-init
     mkdir /efs 0771 system system
 
 on init
-    export LD_SHIM_LIBS /system/lib/libril.so|libsamsung_symbols.so
+    export LD_SHIM_LIBS /system/lib/libril.so|libsamsung_symbols.so:/system/vendor/lib/libqmi.so:libqmi_client_qmux.so
 
     # Set permissions for persist partition
     mkdir /persist 0771 system system
