[DO NOT MERGE] msm8960: restart rild after boot complete
* For whatever reason this needs to be started later for our janky
  ril to work. This is a hacky way to get ril working consistently
  on boot.

Change-Id: If72633666002a9caf27bfd9f734133addd7339e8

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -657,4 +657,5 @@ on property:ro.baseband=mdm
 on property:dev.bootcomplete=1
     # disable pulsing led on boot complete
     exec /system/bin/sh /system/etc/init.led.sh
-
+    stop rild
+    start rild
